--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
+<IDOCTYPE html>
+<html lang="en">
 
+    <head>
+            <title>
+                Google forms
+            </title>
+            <meta charset="UTF-8" />
+            <link rel="stylesheet" href="style.css" />
+    </head>
+
+    <body>
+        <div class="center">
+            <div class="container">
+                <h2>
+                    Pemilihan kelas murid kelas 10
+                </h2>
+                <form action="" method="POST">
+                    <div class="txt_field">
+                        <label> Nama </label> <br> <br>
+                        <input type="text" name="text" min="1" max="20" required>
+                    </div>
+
+                    <div class="txt_field">
+                        <label> Kode masuk </label> <br> <br>
+                        <input type="password" name="password" min="1" max="6" required>
+                        <span></span>
+                    </div>
+
+
+                        <label> Jenis kelamin </label>  <br>
+
+                        <label for="laki-laki">laki-laki</label>
+                        <input type="radio" id="laki-laki" value="laki-laki" name="kelamin">
+
+                        <label for="perempuan">perempuan</label>
+                        <input type="radio" id="perempuan" value="perempuan" name="kelamin"> <br> <br>
+
+
+                        <label> kelas </label> <br>
+                        <select required id="select">
+                            <option value="10.1">10.1</option>
+                            <option value="10.2">10.2</option>
+                            <option value="10.3">10.3</option>
+                        </select>
+
+                        <br>
+                        
+                        <button id="button6">
+                            <a href="Google forms2.html">
+                                    NEXT
+                            </a>
+                        </button>
+
+                </form>
+            
+            </div>
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+    </body>
